# DicoDiachroStudio

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
audit/: README.md  audit_fonctionnel_detail.md  cli_audit.md  cli_command_matrix.csv  functional_inventory.csv  functional_inventory_classified.csv  summary_executif.md
docs/: architecture.md  backlog-page-field.md  backlog-phase2-fields.md  compare.md  conventions.md  curation.md  data_formats.md  parsing.md  pipeline.md  profiles.md  templates.md
legacy/: Extraction.py  merge_resultats.py  process_protocole.py  rise_error.py  test.py
sample_data/: s_vs_f.txt  sample_input.txt
tests/: conftest.py  test_active_corpus.py  test_align.py  test_alpha_bucket.py  test_compare_algorithm_branching.py  test_compare_alignment_exact.py  test_compare_alignment_fuzzy.py  test_compare_alpha_filter.py  test_compare_coverage.py  test_compare_run_storage.py  test_compare_tab_smoke.py  test_conventions.py  test_conventions_tab_preview.py  test_conventions_tab_smoke.py  test_drop_utils.py  test_entries_tab_alpha_filter.py  test_entries_tab_deleted_toggle.py  test_entries_tab_filters_pagination.py  test_entries_tab_layout.py  test_entries_tab_selection_details.py  test_export_tab_paths.py  test_gui_smoke.py  test_import_corpus_bootstrap.py  test_import_tab_project_button.py  test_main_window_exposed_tabs.py  test_os_open.py  test_overrides.py  test_parser_preset.py  test_parsing.py  test_pdf_text_import.py  test_pipeline_source_filters.py  test_profiles.py  test_qa.py  test_slug_utils.py  test_template_cli.py  (+12 more)
(+81 files in other folders)
